package com.brkyzdmr.designpatterns.creational.abstractfactory;

public interface Magazine {
    public void reload();
    public void fire();
    public void test();
}
